# Corten-DOM

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_IMPLEMENTATION_REPORT.md  CDATA_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS_v0.6.0.md  IMPLEMENTATION_STATUS_v0.7.0.md  IMPLEMENTATION_STATUS_v0.8.5.md  PHASE_1_COMPLETION_REPORT_v0.3.0.md  PHASE_8_FINAL_REPORT.md  PROJECT_COMPLETION_REPORT.md  PROJECT_COMPLETION_REPORT_v0.2.0.md  PROJECT_COMPLETION_REPORT_v0.8.5.md  SESSION_SUMMARY_2025-11-14.md  SPECIFICATION_GAP_ANALYSIS.md  TREE_WALKER_SUMMARY.md  orchestration-resume-context.json
components/dom_advanced/: CLAUDE.md  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
components/dom_advanced/benches/: advanced_features.rs
components/dom_advanced/src/: element_ext.rs  geometry.rs  lib.rs  range.rs  selection.rs
components/dom_advanced/src/mutation/: mod.rs  observer.rs  record.rs
components/dom_advanced/src/shadow/: mod.rs  shadow_root.rs  slot.rs
components/dom_collections/: CLAUDE.md  Cargo.toml  NAMEDNODEMAP_IMPLEMENTATION_REPORT.md  README.md  TREE_WALKER_COMPLETION_REPORT.md
components/dom_collections/src/: dom_token_list.rs  html_collection.rs  lib.rs  named_node_map.rs  node_iterator.rs  node_list.rs  tree_walker.rs
components/dom_collections/tests/: dom_token_list_tests.rs  html_collection_tests.rs  node_list_tests.rs  test_named_node_map.rs  test_node_iterator.rs  test_tree_walker.rs
components/dom_core/: CLAUDE.md  Cargo.toml  HTML5_VALIDATION_IMPLEMENTATION_REPORT.md  README.md  WPT_IMPLEMENTATION_REPORT.md
components/dom_core/benches/: attribute_operations.rs  node_operations.rs  query_selectors.rs  tree_manipulation.rs
components/dom_core/src/: attr.rs  cdata_section.rs  comment.rs  document.rs  document_fragment.rs  document_type.rs  dom_implementation.rs  element.rs  event.rs  html5_validation.rs  lib.rs  namespaces.rs  processing_instruction.rs  range.rs  text.rs  tree_order.rs
components/dom_core/src/node/: mod.rs
components/dom_core/tests/: WPT_TEST_SUMMARY.md  test_units.rs  wpt_attributes.rs  wpt_documents.rs  wpt_elements.rs  wpt_mutations.rs  wpt_nodes.rs
components/dom_core/tests/unit/: mod.rs  test_attr.rs  test_cdata_section.rs  test_document.rs  test_document_type.rs  test_element.rs  test_html5_validation.rs  test_node.rs  test_processing_instruction.rs
components/dom_events/: CLAUDE.md  Cargo.toml  README.md
components/dom_events/benches/: event_dispatch.rs
components/dom_events/src/: document_ext.rs  event.rs  event_dispatcher.rs  event_listener.rs  event_target.rs  lib.rs
components/dom_events/src/event_types/: composition_event.rs  custom_event.rs  focus_event.rs  input_event.rs  keyboard_event.rs  mod.rs  mouse_event.rs  ui_event.rs  wheel_event.rs
components/dom_events/tests/: event_bubbling_test.rs
components/dom_impl/: CLAUDE.md  Cargo.toml  README.md
components/dom_impl/benches/: dom_operations.rs
components/dom_impl/src/: atoms.rs  component.rs  config.rs  integration.rs  lib.rs  message_handler.rs  messages.rs  sanitization.rs  validation.rs
components/dom_impl/tests/integration/: api_reexports.rs  dom_integration.rs  main.rs  message_handling.rs
components/dom_selectors/: CLAUDE.md  Cargo.toml  README.md
components/dom_selectors/benches/: selector_matching.rs
components/dom_selectors/src/: lib.rs  matcher.rs  query.rs
components/dom_selectors/tests/: test_complex_selectors.rs  test_simple_selectors.rs  test_validation.rs
components/dom_storage/: CLAUDE.md  Cargo.toml  README.md
components/dom_storage/benches/: arena_operations.rs
components/dom_storage/src/: arena.rs  gc.rs  lib.rs  weak_refs.rs
components/dom_storage/tests/: unit_tests.rs
components/dom_storage/tests/unit/: mod.rs  test_arena.rs  test_gc.rs  test_weak_refs.rs
components/dom_types/: .gitignore  CLAUDE.md  Cargo.toml  README.md
components/dom_types/examples/: atom_demo.rs
components/dom_types/src/: atom.rs  error.rs  geometry.rs  ids.rs  lib.rs  mutation.rs  node_type.rs  shadow_root.rs  string_map.rs
components/dom_types/tests/: test_atom.rs  test_error.rs  test_ids.rs  test_node_type.rs
contracts/: dom_advanced.yaml  dom_collections.yaml  dom_core.yaml  dom_events.yaml  dom_impl.yaml  dom_selectors.yaml  dom_storage.yaml  dom_types.yaml
docs/wpt/: WPT_STRATEGY.md
orchestration/: MIGRATION_LOG.json  project-metadata.json
orchestration/data/: installation_manifest.json  migration_log.json
orchestration/data/state/: completion_state.json  extraction_metadata.json  queue_state.json  spec_manifest.json
specifications/: dom-component-specification.md
tests/wpt-rust/: README.md
