[package]
name = "dom-advanced"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
description = "Advanced DOM features: MutationObserver, Range, Selection, Shadow DOM"

[dependencies]
# Internal dependencies
dom-types = { path = "../dom_types" }
dom-core = { path = "../dom_core" }
dom-events = { path = "../dom_events" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Data structures
dashmap = "5.5"
smallvec = "1.11"

# Thread safety
parking_lot = "0.12"
crossbeam = "0.8"

# Error handling
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[features]
default = ["shadow-dom"]
shadow-dom = []
mutation-observer = []

[[bench]]
name = "advanced_features"
harness = false
