[package]
name = "dom-collections"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
description = "Live collections and tree traversal for DOM"

[dependencies]
# Internal dependencies
dom-types = { path = "../dom_types" }
dom-core = { path = "../dom_core" }

# Data structures
dashmap = "5.5"
smallvec = "1.11"

# Thread safety
parking_lot = "0.12"

# Error handling
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[features]
default = []
