[package]
name = "dom-core"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
description = "Core DOM nodes and tree operations"

[dependencies]
# Internal dependencies
dom-types = { path = "../dom_types" }
dom-storage = { path = "../dom_storage" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Data structures
dashmap = "5.5"
indexmap = "2.1"
smallvec = "1.11"
string_cache = "0.8"

# Parsing and validation
html5ever = "0.26"
markup5ever = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Thread safety
parking_lot = "0.12"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
insta = "1.34"

[features]
default = ["validation"]
validation = []

[[bench]]
name = "node_operations"
harness = false
