[package]
name = "browser-dom-impl"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
description = "DOM Implementation for CortenBrowser - Main library"

[lib]
name = "browser_dom_impl"
path = "src/lib.rs"

[dependencies]
# Internal DOM components
dom-types = { path = "../dom_types" }
dom-storage = { path = "../dom_storage" }
dom-core = { path = "../dom_core" }
dom-collections = { path = "../dom_collections" }
dom-events = { path = "../dom_events" }
dom-selectors = { path = "../dom_selectors" }
dom-advanced = { path = "../dom_advanced", optional = true }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Concurrency
parking_lot = "0.12"

# Lazy initialization for atom tables
once_cell = "1.19"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
insta = "1.34"
mockall = "0.12"

[features]
default = []
all-features = ["dom-advanced", "dom-advanced/shadow-dom", "dom-advanced/mutation-observer"]
profiling = []

[[bench]]
name = "dom_operations"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false

[profile.bench]
inherits = "release"

[profile.test]
opt-level = 2
