[package]
name = "dom-selectors"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
description = "CSS selector matching and querying for DOM"

[dependencies]
# Internal dependencies
dom-types = { path = "../dom_types" }
dom-core = { path = "../dom_core" }
dom-collections = { path = "../dom_collections" }

# Parsing and validation
cssparser = "0.31"
selectors = "0.25"

# Concurrency
parking_lot = "0.12"

# Error handling
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[features]
default = []

[[bench]]
name = "selector_matching"
harness = false
