[package]
name = "dom-storage"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
description = "Thread-safe node storage and memory management for DOM"

[dependencies]
# Internal dependencies
dom-types = { path = "../dom_types" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Data structures
typed-arena = "2.0"
weak-table = "0.3"

# Thread safety
parking_lot = "0.12"
crossbeam = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[features]
default = []

[[bench]]
name = "arena_operations"
harness = false
