[package]
name = "dom-types"
version = "0.1.0"
edition = "2021"
authors = ["CortenBrowser Team"]
description = "Shared type definitions for DOM implementation"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

[dev-dependencies]
proptest = "1.4"

[features]
default = []
